<resources>
    <string name="app_name">Borsch</string>

    <string name="title_activity_account_presenter">AccountPresenter</string>
    <string name="action_settings">Settings</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="nav_header_dormitory">Общежитие</string>
    <string name="nav_header_room">Комната</string>
    <string name="title_activity_user_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_repit_password">Повторите пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_registration">Регистрация</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_login">This login address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing login
        completions."</string>

    <!--Strings related to edit-->
    <string name="edit_login">Логин</string>
    <string name="edit_firstName">Имя</string>
    <string name="edit_secondName">Фамилия</string>
    <string name="edit_city">Город</string>
    <string name="edit_university">Университет</string>
    <string name="edit_dormitory">Общежитие</string>
    <string name="edit_room">Комната</string>
    <string name="edit_vkontakte">VKontakte</string>
    <string name="edit_telegram">Telegram</string>
    <string name="edit_email">Email</string>
    <string name="action_edit">Изменить</string>
    <string name="action_close">Отменить</string>
    <string name="user_settings_key">mysettings</string>

</resources>
