<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:padding="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nav_header_textview_spacing"
            android:baselineAligned="true"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title" />

        <TextView
            android:id="@+id/secondName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nav_header_textview_spacing"
            android:baselineAligned="true"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_subtitle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nav_header_textview_spacing"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="Text" />

        <TextView
            android:id="@+id/university"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nav_header_textview_spacing"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nav_header_textview_spacing"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_dormitory" />

        <TextView
            android:id="@+id/dormitory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nav_header_textview_spacing"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nav_header_textview_spacing"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_room" />

        <TextView
            android:id="@+id/room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/nav_header_textview_spacing"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="TextView" />

    </LinearLayout>

    <TextView
        android:id="@+id/eatRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/nav_header_textview_spacing"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="0" />

    <TextView
        android:id="@+id/cookRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/nav_header_textview_spacing"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/colorAccept"
            android:gravity="start|bottom"
            android:padding="10dp"
            android:text="EDIT" />

        <Button
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:gravity="end|bottom"
            android:padding="10dp"
            android:text="EXIT" />

    </LinearLayout>
</LinearLayout>
